third_party/blink/renderer/core/animation/compositor_animations.cc
@@ -411,7 +411,7 @@ void CompositorAnimations::StartAnimationOnCompositor(
 
 void CompositorAnimations::CancelAnimationOnCompositor(
     const Element& element,
-    const Animation& animation,
+    CompositorAnimation* compositor_animation,
     int id) {
   if (!CheckCanStartElementOnCompositor(element).Ok()) {
     // When an element is being detached, we cancel any associated
@@ -421,8 +421,6 @@ void CompositorAnimations::CancelAnimationOnCompositor(
     // compositing update.
     return;
   }
-  CompositorAnimation* compositor_animation =
-      animation.GetCompositorAnimation();
   if (compositor_animation)
     compositor_animation->RemoveKeyframeModel(id);
 }
