third_party/blink/renderer/core/animation/compositor_animations.h
@@ -111,7 +111,7 @@ class CORE_EXPORT CompositorAnimations {
                                          Vector<int>& started_animation_ids,
                                          double animation_playback_rate);
   static void CancelAnimationOnCompositor(const Element&,
-                                          const Animation&,
+                                          CompositorAnimation*,
                                           int id);
   static void PauseAnimationForTestingOnCompositor(const Element&,
                                                    const Animation&,
